removed warnings by using flex-end insted of end

--- a/src/app/mainscreen/chat/chat.component.scss
+++ b/src/app/mainscreen/chat/chat.component.scss
@@ -200,7 +200,7 @@ app-message-create {
 .addMemberContainer {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
     padding-top: 30px;
 }
