--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -1,9 +1,10 @@
 <mat-card id="channel" *ngIf="channelFirebaseService.selectedChannel  && userFirebaseService.currentUser.id!='' ">
     <div class='header'>
         <div class="header-title" width="fit-content">
-            <div class="header-title-container"  (mouseover)="hoverTitle=true" (mouseout)="hoverTitle=false" (click)="showEditChannel = true">
+            <div class="header-title-container" (mouseover)="hoverTitle=true" (mouseout)="hoverTitle=false"
+                (click)="showEditChannel = true">
                 <h2># {{ channelFirebaseService.selectedChannel.channelName }}</h2>
-                <div class="header-title-container-icons" >
+                <div class="header-title-container-icons">
                     <img *ngIf="!hoverTitle" src="assets/img/icons/arrow_down_black.svg" alt="dropdown_black">
                     <img *ngIf="hoverTitle" src="assets/img/icons/arrow_down_blue.svg" alt="dropdown_blue">
                 </div>
@@ -11,8 +12,8 @@
         </div>
 
         <div class="addMemberContainer">
-            <div class="user-avatar-list" tabindex="0" mat-icon-button [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger"
-                aria-label="Example icon-button with a menu">
+            <div class="user-avatar-list" tabindex="0" mat-icon-button [matMenuTriggerFor]="menu"
+                #menuTrigger="matMenuTrigger" aria-label="Example icon-button with a menu">
                 <img class="avatar-img" *ngFor="let user of userOnCurrentChannel | slice:0:3; let i = index"
                     [style.left]="i * -10 + 'px'" [style.z-index]="3 - i" [src]="user.avatar" alt="avatar">
 
@@ -20,7 +21,8 @@
 
             </div>
 
-            <img [matMenuTriggerFor]="addMember"  #addMemberTrigger="matMenuTrigger" class="addmembers" src="assets/img/icons/addmembers.svg">
+            <img [matMenuTriggerFor]="addMember" #addMemberTrigger="matMenuTrigger" class="addmembers"
+                src="assets/img/icons/addmembers.svg">
         </div>
         <app-edit-channel *ngIf="showEditChannel" (closeEvent)="closeEditDialog()"></app-edit-channel>
     </div>
@@ -29,7 +31,7 @@
     <mat-menu #menu="matMenu" (click)="$event.stopPropagation()">
         <div class="menuHeader" (click)="$event.stopPropagation()">
             <h3 class="menuHeaderText">Mitglieder</h3>
-            <img  class="close" (click)="closeMenus()" src="/assets/img/icons/close.svg">
+            <img class="close" (click)="closeMenus()" src="/assets/img/icons/close.svg">
         </div>
 
         <div class="menuUsersContainer" (click)="$event.stopPropagation()">
@@ -56,8 +58,8 @@
         <div *ngIf="newAddedToChannelUser" class="containerOfInput" (click)="$event.stopPropagation()">
 
             <div *ngIf="newAddedToChannelUser.fullName" class="inputContent" (click)="$event.stopPropagation()">
-                <img *ngIf="newAddedToChannelUser" class="inputAvatar" [matMenuTriggerFor]="addMember" #addMemberTrigger="matMenuTrigger"
-                    src="{{newAddedToChannelUser.avatar}}">
+                <img *ngIf="newAddedToChannelUser" class="inputAvatar" [matMenuTriggerFor]="addMember"
+                    #addMemberTrigger="matMenuTrigger" src="{{newAddedToChannelUser.avatar}}">
                 <span *ngIf="newAddedToChannelUser" class="menuUsersName">{{newAddedToChannelUser.fullName}}</span>
                 <img class="cancelSelectionImage" (click)="cancelSelection()" src="/assets/img/icons/close.svg">
             </div>
@@ -87,22 +89,34 @@
         <button (click)="$event.stopPropagation(); addUserToChannel($event)" class="addSelection">Hinzufügen</button>
     </mat-menu>
 
-
-
-
     <div class="chat-container">
-        <div *ngFor="let message of channelFirebaseService.selectedChannelMessages; let i = index">
-            <app-message [message]="message" [messageLocationName]="'channel'"></app-message>
-            <ng-template [appIfChanged]="getMessageTime(message)">
-                <app-date-line *ngIf="channelFirebaseService.selectedChannelMessages[i-1]"
-                    [messageTime]="getMessageTime(channelFirebaseService.selectedChannelMessages[i-1])"></app-date-line>
-            </ng-template>
-        </div>
 
-        <app-date-line
-            *ngIf="channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1]"
-            [messageTime]="getMessageTime(channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1])">
-        </app-date-line>
+        <ng-container *ngIf="channelFirebaseService.selectedChannelMessages.length>0; else emptyChannel">
+            <div *ngFor="let message of channelFirebaseService.selectedChannelMessages; let i = index">
+                <app-message [message]="message" [messageLocationName]="'channel'"></app-message>
+                <ng-template [appIfChanged]="getMessageTime(message)">
+                    <app-date-line *ngIf="channelFirebaseService.selectedChannelMessages[i-1]"
+                        [messageTime]="getMessageTime(channelFirebaseService.selectedChannelMessages[i-1])"></app-date-line>
+                </ng-template>
+            </div>
+
+            <app-date-line
+                *ngIf="channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1]"
+                [messageTime]="getMessageTime(channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1])">
+            </app-date-line>
+        </ng-container>
+
+        <ng-template #emptyChannel>
+            <!-- add- Profile Link-->
+            <div class="channel-display">
+                <div class='channel-header'>
+                    <h3># {{ channelFirebaseService.selectedChannel.channelName }}</h3>
+                </div>
+                <div class="channel-text">
+                   Das ist der Anfang des Channels <a href="#"># {{ channelFirebaseService.selectedChannel.channelName }}</a>
+                </div>
+            </div>
+        </ng-template>
     </div>
 
     <app-message-create [path]="messagePath" [currentLocation]="'channel'"></app-message-create>
