updated edit message style

--- a/src/app/mainscreen/message/message-edit/message-edit.component.html
+++ b/src/app/mainscreen/message/message-edit/message-edit.component.html
@@ -6,10 +6,10 @@
         </div>
         <div class="msg-submit-options">
             <div class="msg-send">
-                <button (click)="saveMessage()">Zurück</button>
+                <button class='back' (click)="saveMessage()">Zurück</button>
             </div>
             <div class="msg-send">
-                <button (click)="saveMessage()">Speichern</button>
+                <button class='submit' (click)="saveMessage()">Speichern</button>
             </div>
         </div>
 
