--- a/src/app/mainscreen/header/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/header/searchbar/searchbar.component.html
@@ -1,18 +1,21 @@
 <div id="header-searchfield-container" *ngIf="searchResultsChannels && searchResultsUsers">
-    <input id="header-searchfield" 
-    type="text"
-    placeholder="Code learning durchsuchen" 
-    [matAutocomplete]="auto"
-    [formControl]="headerControl"
-    matInput>
-    
-    <mat-autocomplete 
-        autoActiveFirstOption #auto="matAutocomplete"
+    <input #searchField id="header-searchfield" type="text" placeholder="Code learning durchsuchen" [matAutocomplete]="auto"
+        [formControl]="headerControl" matInput>
+
+    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
         (optionSelected)="selectOption($event.option.value)">
-        <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option" 
-        click="selectOption($event)">{{option}}</mat-option>
+
+        <mat-option *ngFor="let option of filteredOptions$ | async" 
+        [value]="option.id" 
+        (click)="selectOption(option.id)">
+        <img 
+            class='user-img' 
+            *ngIf="option.avatarSrc" 
+            src="{{option.avatarSrc}}">
+                 {{option.name}} 
+        </mat-option>
     </mat-autocomplete>
-    <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" >
+    <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search">
 </div>
 
 
