--- a/src/app/mainscreen/message/message-create/message-create.component.scss
+++ b/src/app/mainscreen/message/message-create/message-create.component.scss
@@ -3,9 +3,9 @@
     width: calc(100% - 40px);
     background-color: rgb(255, 255, 255);
     border: solid 1px #ADB0D9;
-    min-height: 100px;
     border-radius: 20px;
     padding: 20px;
+    margin-bottom: 16px;
     cursor: pointer;
 
 
