--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -194,13 +194,15 @@ app-message-create {
 .menuUsersContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .menuUsers {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 100%;
+    width: 59%;
+    margin-top: 19px;
 }
 
 .menuUsersImage {
@@ -226,8 +228,10 @@ app-message-create {
 .addMemberInMenu {
     display: flex;
     align-items: center;
-    padding-top: 21px;
+    margin-top: 21px;
     cursor: pointer;
+    justify-content: center;
+    margin-right: 25px;
 }
 
 
@@ -383,3 +387,8 @@ app-message-create {
 }
 
 .cancelSelection {}
+
+.menuHeader {
+    display: flex;
+    justify-content: space-between;
+}
