--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
@@ -38,7 +38,7 @@
         </div>
         <div>
             <h3>Erstellt von</h3>
-            <h2>Name</h2>
+            <h2>{{channelCreatorName}}</h2>
         </div>
     </div>
     <div id="edit-channel-description-container-editMode" *ngIf="editChannelDescription">
@@ -54,7 +54,7 @@
         </div>
         <div>
             <h3>Erstellt von</h3>
-            <h2>Name</h2>
+            <h2>{{channelCreatorName}}</h2>
         </div>
     </div>
 
