--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
@@ -3,13 +3,13 @@
     <div class="headerContainer">
         <h3 class="headerText">Leute hinzufügen</h3>
         <img  class="close"  src="/assets/img/icons/close.svg">
-
     </div>
 
     <mat-radio-group class="radioButtonContainer" [(ngModel)]="selectedOption" (ngModelChange)="chooseSelection()">
         <mat-radio-button value="1">Alle Mitglieder von ... hinzufügen</mat-radio-button>
         <mat-radio-button value="2">Bestimmte Leute hinzufügen</mat-radio-button>
         <input *ngIf="selectedOption == '2'" class="addUserToChannelDialogInput">
+        <app-searchbar *ngIf="selectedOption == '2'"></app-searchbar>
     </mat-radio-group>
 
 <div class="addUserToSelectionContainer">
