--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
@@ -9,8 +9,13 @@
         <mat-radio-button value="1">Alle Mitglieder von ... hinzufügen</mat-radio-button>
         <mat-radio-button value="2">Bestimmte Leute hinzufügen</mat-radio-button>
         <!-- <input *ngIf="selectedOption == '2'" class="addUserToChannelDialogInput"> -->
-        <app-searchbar *ngIf="selectedOption == '2'" [types]="'users'" [action]="'addUserToChannel'"></app-searchbar>
+        <app-searchbar *ngIf="selectedOption == '2'" [types]="'users'" [action]='channel' 
+        (updatedChannelModel)="handleChannelUserUpdate($event)"
+        ></app-searchbar>
+        <div #selectedUsers>ssss</div>
     </mat-radio-group>
+
+    
 
 <div class="addUserToSelectionContainer">
 <button class="addUserToSelection">Erstellen</button>
