--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -187,3 +187,29 @@ $headerDropdownPositionRigth: 0px;
         color: red; 
     }
 }
+
+@media only screen and (max-width: 1000px) {
+
+    #searchbar{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    #header-container{
+
+        #header-user-name , #headerDropdown {
+            display: none;
+        }
+        #header-user {
+            min-width: unset;
+        }
+        #header-image-container{
+            min-width: unset;
+            img{
+                width: 200px; 
+            }
+        }
+    }
+  
+}
