openProfil in Chat

--- a/src/app/mainscreen/user-profil/user-profil.component.html
+++ b/src/app/mainscreen/user-profil/user-profil.component.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div *ngIf="!isCurrentUser" id="headerUserProfil-message">
-                <button class="btn-blue">
+                <button class="btn-blue" (click)="sendMessage()">
                     <img src="assets/img/icons/message.svg" alt="message">
                     Nachricht
                 </button>
