--- a/src/app/mainscreen/chat/chat.component.html
+++ b/src/app/mainscreen/chat/chat.component.html
@@ -35,7 +35,7 @@
                     <h3>{{ chatPartner.fullName }}</h3>
                 </div>
                 <div class="user-text">
-                    Diese Unterhaltung findet nur zwischen <a href="#">@{{ chatPartner.fullName }}</a> und dir statt.
+                    Diese Unterhaltung findet nur zwischen <a (click)="openProfil()">@{{ chatPartner.fullName }}</a> und dir statt.
                 </div>
             </div>
         </ng-template>
