--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -206,8 +206,9 @@ app-message-create {
 }
 
 .menuUsersImage {
-    padding-left: 20px;
+    //padding-left: 20px;
     width: 60px;
+    border-radius: 50%;
 }
 
 .menuUsersName {
