--- a/src/app/mainscreen/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/searchbar/searchbar.component.html
@@ -1,32 +1,32 @@
 <div id="header-searchfield-container" *ngIf="searchResultsChannels && searchResultsUsers">
 
-    <mat-chip-grid #chipGrid aria-label="Fruit selection" *ngIf="channel">
-          <mat-chip-row (removed)="remove(user)" *ngFor="let user of channel.users">
-            {{user}}
-            <button matChipRemove [attr.aria-label]="'remove ' + user">
-              <mat-icon>cancel</mat-icon>
-            </button>
-          </mat-chip-row>
-      </mat-chip-grid>
+  <mat-chip-grid #chipGrid>
+    <mat-chip-row (removed)="remove(user)" *ngFor="let user of channelUsers; let i = index">
+      <img src='{{user.avatar}}' class="inputAvatar"> {{ user.fullName }}
+      <button matChipRemove [attr.aria-label]="'remove ' + user">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </mat-chip-row>
+  </mat-chip-grid>
 
+  <input #searchField id="header-searchfield" type="text" placeholder="Code learning durchsuchen"
+    [matAutocomplete]="auto" [matChipInputFor]="chipGrid" [formControl]="headerControl" matInput>
 
+  <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="add($event.option.value)">
+    <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option">
 
-    <input #searchField id="header-searchfield" type="text" placeholder="Code learning durchsuchen" [matAutocomplete]="auto"
-        [formControl]="headerControl" matInput>
+      <div *ngIf="option.type === 'user'; else channel">
+        <img class='user-img' src="{{ option.avatarSrc }}">
+        {{ option.name }}
+      </div>
 
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
-        (optionSelected)="add($event.option.value)">
-
-        <mat-option *ngFor="let option of filteredOptions$ | async" 
-        [value]="option.id">
-        <img 
-            class='user-img' 
-            *ngIf="option.avatarSrc" 
-            src="{{option.avatarSrc}}">
-                 {{option.name}} 
-        </mat-option>
-    </mat-autocomplete>
-    <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search">
+      <ng-template #channel>
+        {{ option.name }}
+      </ng-template>
+      
+    </mat-option>
+  </mat-autocomplete>
+  <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search">
 </div>
 
 
