--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -111,18 +111,21 @@
         display: flex;
         align-items: center;
 
-        .header-title-container{
+        .header-title-container {
             display: flex;
             padding: 4px 12px 4px 12px;
-            h2{
+
+            h2 {
                 margin: 0px;
             }
-            .header-title-container-icons{
+
+            .header-title-container-icons {
                 height: 30px;
             }
-            &:hover{
+
+            &:hover {
                 color: #535AF1;
-                background-color: #ECEEFE; 
+                background-color: #ECEEFE;
                 border-radius: 37px;
             }
         }
@@ -249,6 +252,10 @@ app-message-create {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    app-searchbar {
+       
+    }
 }
 
 .inputContainer {
