--- a/src/app/mainscreen/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/searchbar/searchbar.component.html
@@ -26,7 +26,7 @@
       
     </mat-option>
   </mat-autocomplete>
-  <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search">
+  <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" *ngIf="styleType=='header'">
 </div>
 
 
