--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -10,7 +10,10 @@
 
 
 <div id="main-container" *ngIf="channelFirebaseService.finishedLoading && userFirebaseService.finishedLoading">
-    <app-header id="main-header"></app-header>
+    <app-header id="main-header" 
+        [channelSelected]="channelFirebaseService.selectedChannelId != undefined"
+        [chatSelected]="chatFirebaseService.selectedChatId != undefined">
+    </app-header>
     <div id="main-body">
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
         <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView; else channelView">
@@ -24,6 +27,26 @@
             <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
         </ng-template>
     </div>
+
+    
+    <div id="main-body-mobile">
+        <app-sidenav *ngIf="channelFirebaseService.selectedChannelId == undefined && chatFirebaseService.selectedChatId == undefined" 
+            id="main-sidebar">
+        </app-sidenav>
+
+        <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView; else channelView">
+        </ng-container>
+
+        <ng-template #chatView>
+            <app-chat *ngIf="chatFirebaseService.selectedChatId" id="main-chat"></app-chat>
+        </ng-template>
+
+        <ng-template #channelView>
+            <app-channel *ngIf="channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
+            <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
+        </ng-template>
+    </div>
+    
 </div>
 
 <div (click)="toggleSideNav()" id="workspace">
