--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -2,14 +2,6 @@
     <div id="header-image-container">
         <img src="assets/img/logo/logo.svg" alt="DABubble Logo">
     </div>
-    <div id="header-image-container-mobile">
-        <img *ngIf="!channelSelected && !chatSelected" src="assets/img/logo/logo.svg" alt="DABubble Logo">
-        <div *ngIf="channelSelected || chatSelected" id="header-image-container-mobile-selected">
-            <img src="/assets/img/icons/arrow_left_back.svg" alt="back" (click)="closeChatOrChannel()">
-            <img src="assets/img/logo/codeLearningLogo.png" alt="DABubble Logo">
-            <h3>Code learning</h3>
-        </div>
-    </div>
     <div id="searchbar">
         <app-searchbar *ngIf="userService.finishedLoading && channelService.finishedLoading"  [types]='"all"' [action]="'openSelection'"></app-searchbar>
     </div>
@@ -26,6 +18,28 @@
         </div>
     </div>
     <div id="headerMenu" *ngIf="showHeaderMenu">
+        <a (click)="showProfil()">Profil</a>
+        <a (click)="logout()">Logout</a>
+    </div>
+</div>
+
+<div id="header-container-mobile">
+    <div id="header-image-container-mobile">
+        <img *ngIf="!channelSelected && !chatSelected" src="assets/img/logo/logo.svg" alt="DABubble Logo">
+        <div *ngIf="channelSelected || chatSelected" id="header-image-container-mobile-selected">
+            <img src="/assets/img/icons/arrow_left_back.svg" alt="back" (click)="closeChatOrChannel()">
+            <img src="assets/img/logo/codeLearningLogo.png" alt="DABubble Logo">
+            <h3>Code learning</h3>
+        </div>
+    </div>
+    <div id="header-user-mobile" (click)="toogleHeaderMenu()">
+        <div *ngIf="user.avatar!=''" id="header-user-icon-mobile">
+            <img src="{{user.avatar}}" alt="UserIcon">
+        </div>
+    </div>
+
+
+    <div id="headerMenu-mobile" *ngIf="showHeaderMenu">
         <a (click)="showProfil()">Profil</a>
         <a (click)="logout()">Logout</a>
     </div>
