--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -3,7 +3,7 @@ $headerImage-width: 300px;
 $headerUser-width: 300px;
 
 
-#header-container {
+#header-container, #header-container-mobile {
     width: 100%;
     gap: 12px;
     display: flex;
@@ -32,14 +32,14 @@ $headerUser-width: 300px;
         border: 0px;
     }
 
-    #header-user {
+    #header-user, #header-user-mobile{
         display: flex;
         align-items: center;
         justify-content: flex-end;
         gap: 12px;
         min-width: $headerUser-width;
 
-        #header-user-icon {
+        #header-user-icon, #header-user-icon-mobile {
             position: relative;
 
             img {
@@ -187,7 +187,8 @@ $headerDropdownPositionRigth: 0px;
         color: red; 
     }
 }
-#header-image-container-mobile{
+
+#header-container-mobile{
     display: none;
 }
 
@@ -200,6 +201,38 @@ $headerDropdownPositionRigth: 0px;
 
 @media only screen and (max-width: 768px) {
 
+    #header-container{
+        display: none;
+    }
+
+    #header-container-mobile{
+        display: flex;
+        max-width: 100vw;
+
+        #header-image-container-mobile{
+            display: flex;
+
+            img{
+                width: 180px;
+            }
+            #header-image-container-mobile-selected{
+                display: flex;
+                gap:12px; 
+                img{
+                    width: unset;
+                };
+            }
+        }
+        #header-user-mobile{
+            min-width: unset;
+        }
+    }
+
+    /*
+    #headerMenu-mobile{
+        display: block;
+    }
+
     #header-image-container{
         display: none !important;
     }
@@ -211,12 +244,14 @@ $headerDropdownPositionRigth: 0px;
             gap:12px; 
         }
     }
-
+    */
 }
 
-@media only screen and (max-width: 700px) {
-    #header-container{
 
+
+/*
+@media only screen and (max-width: 700px) {
+    #header-container{      
         #header-user-name , #headerDropdown {
             display: none;
         }
@@ -232,5 +267,7 @@ $headerDropdownPositionRigth: 0px;
     }
   
 }
+
+*/
 
 
