--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -10,6 +10,9 @@
             </mat-icon>
         </button>
     </div>
+    <div id="sidenav-mobile-searchbar">
+        <app-searchbar *ngIf="userFirebaseService.finishedLoading && channelFirebaseService.finishedLoading"  [types]='"all"' [action]="'openSelection'"></app-searchbar>
+    </div>
 
 
     <div class="myChannelsContainer">
